// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backgrounds should render responsive values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  background-color: rgb(153,205,255);
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    background-color: rgb(2,122,197);
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    background responsive
  </div>
</div>
`;

exports[`Backgrounds should render single values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  background-color: rgb(2,122,197);
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    background single
  </div>
</div>
`;

exports[`Borders should render responsive values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  border-style: dashed;
  border-color: rgb(0,20,137);
  border-width: 1px;
  border-radius: 0;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    border-style: dotted;
    border-color: rgb(102,179,255);
    border-width: 2px;
    border-radius: 2px;
  }
}

@media screen and (min-width:64rem) {
  .emotion-0 {
    border-style: solid;
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    border responsive
  </div>
</div>
`;

exports[`Borders should render single values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  border-style: solid;
  border-color: rgb(0,20,137);
  border-width: 1px;
  border-radius: 4px;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    border single
  </div>
</div>
`;

exports[`Color mappings should map pseudo selector color values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
}

.emotion-0:hover {
  background-color: rgb(248,248,249);
  border-color: rgb(117,12,12);
  color: rgb(255,255,255);
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    background responsive
  </div>
</div>
`;

exports[`Color mappings should map responsive color values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  background-color: rgb(153,205,255);
  border-color: rgb(96,107,133);
  color: rgb(40,42,43);
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    background-color: rgb(2,122,197);
    border-color: rgb(117,12,12);
    color: rgb(255,255,255);
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
    color={
      Array [
        "colorText",
        "colorTextBrandInverse",
      ]
    }
  >
    background responsive
  </div>
</div>
`;

exports[`Color mappings should map responsive pseudo selector color values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
}

.emotion-0:hover {
  background-color: rgb(248,248,249);
  border-color: rgb(117,12,12);
  color: rgb(226,37,37);
}

@media screen and (min-width:25rem) {
  .emotion-0:hover {
    background-color: rgb(255,255,255);
    border-color: rgb(117,12,12);
    color: rgb(200,204,207);
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    background responsive
  </div>
</div>
`;

exports[`Color mappings should map single color values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  background-color: rgb(2,122,197);
  border-color: rgb(96,107,133);
  border-bottom-color: rgb(117,12,12);
  border-left-color: rgb(117,12,12);
  border-right-color: rgba(255,255,255,0.5);
  border-top-color: rgba(255,255,255,0.5);
  color: rgb(40,42,43);
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
    color="colorText"
  >
    background single
  </div>
</div>
`;

exports[`Shadows should render responsive values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  box-shadow: 0 2px 4px 0 rgba(40,42,43,0.3);
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    shadow responsive
  </div>
</div>
`;

exports[`Shadows should render single values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  box-shadow: 0 2px 4px 0 rgba(40,42,43,0.3);
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    shadow single
  </div>
</div>
`;

exports[`Sizes should render responsive values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  width: 5.5rem;
  min-width: 0;
  max-width: 12rem;
  height: 5.5rem;
  min-height: 0;
  max-height: 12rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    width: 12rem;
    min-width: 5.5rem;
    max-width: 18.5rem;
    height: 12rem;
    min-height: 5.5rem;
    max-height: 18.5rem;
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
    height={
      Array [
        "size10",
        "size20",
      ]
    }
    width={
      Array [
        "size10",
        "size20",
      ]
    }
  >
    size responsive
  </div>
</div>
`;

exports[`Sizes should render single values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  width: 5.5rem;
  min-width: 0;
  max-width: 12rem;
  height: 5.5rem;
  min-height: 0;
  max-height: 12rem;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
    height="size10"
    width="size10"
  >
    size single
  </div>
</div>
`;

exports[`Spaces (A) it should render responsive values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin: 0.5rem;
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    space responsive 1
  </div>
</div>
`;

exports[`Spaces (A) it should render single values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0.25rem;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    space single 1
  </div>
</div>
`;

exports[`Spaces (B) it should render single values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  margin-top: 0.25rem;
  margin-right: 0.25rem;
  margin-bottom: 0.5rem;
  margin-left: 0.5rem;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    space single 2
  </div>
</div>
`;

exports[`Spaces (B)it should render responsive values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  margin-top: 0.25rem;
  margin-right: 0.25rem;
  margin-bottom: 0.5rem;
  margin-left: 0.5rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin-top: 0.5rem;
    margin-right: 0.5rem;
    margin-bottom: 0.75rem;
    margin-left: 0.75rem;
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    space responsive 2
  </div>
</div>
`;

exports[`ZIndex Pseudo-class props should generate pseudo-class CSS 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
}

.emotion-0:hover {
  padding: 0.125rem;
}

.emotion-0:active,
.emotion-0[data-active=true] {
  padding: 0.125rem;
}

.emotion-0:focus {
  padding: 0.125rem;
}

.emotion-0:visited {
  padding: 0.125rem;
}

.emotion-0:nth-of-type(even) {
  padding: 0.125rem;
}

.emotion-0:nth-of-type(odd) {
  padding: 0.125rem;
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover {
  padding: 0.125rem;
}

.emotion-0:checked,
.emotion-0[aria-checked=true] {
  padding: 0.125rem;
}

.emotion-0:indeterminate,
.emotion-0[aria-checked=mixed] {
  padding: 0.125rem;
}

.emotion-0[aria-selected=true] {
  padding: 0.125rem;
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  padding: 0.125rem;
}

.emotion-0[aria-pressed=true] {
  padding: 0.125rem;
}

.emotion-0[aria-readonly=true],
.emotion-0[readonly] {
  padding: 0.125rem;
}

.emotion-0:first-of-type {
  padding: 0.125rem;
}

.emotion-0:last-of-type {
  padding: 0.125rem;
}

.emotion-0[aria-expanded=true] {
  padding: 0.125rem;
}

.emotion-0[aria-grabbed=true] {
  padding: 0.125rem;
}

.emotion-0:not(:first-of-type) {
  padding: 0.125rem;
}

.emotion-0:not(:last-of-type) {
  padding: 0.125rem;
}

[role=group]:hover .emotion-0 {
  padding: 0.125rem;
}

.emotion-0:before {
  padding: 0.125rem;
}

.emotion-0:after {
  padding: 0.125rem;
}

.emotion-0:focus-within {
  padding: 0.125rem;
}

.emotion-0::-webkit-input-placeholder {
  padding: 0.125rem;
}

.emotion-0::-moz-placeholder {
  padding: 0.125rem;
}

.emotion-0:-ms-input-placeholder {
  padding: 0.125rem;
}

.emotion-0::placeholder {
  padding: 0.125rem;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    PseudoBox
  </div>
</div>
`;

exports[`ZIndex should render responsive values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  z-index: 2010;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    z-index: 2020;
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    z-index responsive
  </div>
</div>
`;

exports[`ZIndex should render single values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  z-index: 2010;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    z-index single
  </div>
</div>
`;
